Refactor pipeline, update config, and clean up unused files
Major refactor of the main pipeline to use argparse for command-line operations, enabling modular commands for preprocessing, frame display, and ground truth comparison. Updated config.py to simplify ground truth paths and add image adjustment options. Improved detection and counting logic, fixed HOG filtering, and standardized output CSVs. Removed unused files (face_detection.py, evaluation.py, ground truth images). Updated README with new usage instructions and improved precision_data.csv formatting.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ __pycache__/
 .venv
 
 /processed_frames
+/outputs/*.csv
+/outputs/faster_rcnn_frames
+/outputs/hog_frames
+/outputs/yolo_frames
 
 # YOLO models
 yolo12x.pt
